# hermes-checkers

./: .gitignore  README.md  pyproject.toml
checkers/: __init__.py  board.py  cli.py  game.py  moves.py
tests/: test_game.py
